# ComfyUI-Animon

./: __init__.py  nodes.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: publish.yml
workflows/: AnimonI2V.json  AnimonI2V_Upscale.json  AnimonIB2V.json  AnimonUpscale.json
