[project]
name = "animon"
description = "Animon integration for ComfyUI offering custom nodes for generating videos from images, interpolating between frames, and upscaling videos with API control."
version = "0.8.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["openai", "decord"]

[project.urls]
Repository = "https://github.com/IamCreateAI/ComfyUI-Animon"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/IamCreateAI/ComfyUI-Animon/wiki"
"Bug Tracker" = "https://github.com/IamCreateAI/ComfyUI-Animon/issues"

[tool.comfy]
PublisherId = "CreateAI"
DisplayName = "ComfyUI-Animon"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

